Do not forward the 'return pressed' signal of the url selector to the 'Ok' button of the dialog.

BUG: 242063

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1139925